# exercises

./: .gitignore  accumulate.exs  allergens.exs  angram.exs  atbash.exs
asm/: COMBOA.C  COMBOB.S  HELLO3.ASM  HELLO4.ASM  NUMLOCK.ASM  PUTCHAR.ASM
c/: bounds.c  mythread.c  numlock.c  numlock2.c  predef.c  recursn.c  tmode.c  usertime.c
cpp/: debug.cc  defs.cc  dicetest.cc  excptn.cc  fonttest.cc  multi.cc  random.cc  random.h  serial.cc  union.cc  vector.cpp
cpp/aero/: Makefile.am  aero.cpp  configure.in
cpp/clanlib/: Makefile  helloworld.cpp
cpp/namer/: Makefile  namer.cc
cpp/peridot/: main.cpp  node.h  parser.cpp  parser.y  tokens.cpp  tokens.l
cpp/readpng/: Makefile  readpng.cpp
cpp11/: .gitignore  CMakeLists.txt  Makefile  dispatch.cpp  keyword_args.cpp  lambda.cpp  lambda2.cpp
dice/: dice-stats.rb  fateroller  graph.gp  graph3d.data
elisp/: custom.el  greg-fill.el  greg-indent.el  greg-ml-mode.el  gtml-mode.el  inf-ruby.el  init.el  pov-mode.el  ruby-mode.el
elixir/: angram.exs
elixir/bank-account/: account.exs  bank-account_test.exs
elixir/elixir-cpp-hello/: .gitignore  Makefile  README.md  cnano.cc
elixir/intro/: capitalize.exs  center.exs  chain.exs  enum.exs  fib_server.exs  fizzbuzz.exs  frog_spawn.exs  functions.exs  longest.exs  mylist.exs  parse.exs  pmap.exs  primes.exs  tax.exs
elixir/rspec_let/: .gitignore  README.md  mix.exs
elixir/time_zone_diff/: .gitignore  README.md  mix.exs
guesslang/: Rakefile
guesslang/seed/: english.1  french.1
haskell/: WC.hs  fib.hs
idris/: Exercise2.idr  Hello  Longer.idr
java-applets/: example1.html  test.html
java-applets/BUFFER/: Bounce.java
java/ShadowrunCharacterGenerator/: Debug.java  Generator.java  GeneratorAttributes.java  GeneratorBuildPoints.java  GeneratorDetails.java  GeneratorTab.java  Magic.java  Makefile  Race.java  Resources.java  ShadowrunCharacter.java  ShadowrunCharacterGenerator.java
java/java-applets/: MyClass.java  Test.java
java/sockets/: Client.java  Makefile  (+1 more)
node/: lesson1.js
ocaml/: Makefile  simple.ml  sumintegers.ml  tri.ml
perl/: l337.pl  tidy
postgis/: README.md  kick-psql.sh  mix.exs
python/: laylie.py
r/: .gitignore
react/: index.html  package.json
reactdemo/: package.json  webpack.config.js
reduxgeneric/: reduxgeneric.js
ruby/: classtree.rb  cofd  ffitest.rb  hashblock.rb  machinist-to-factory-bot  pdf-remove-first-image  put_in.rb  scrambler.rb
sicp/: exercise-1-1-2.rkt  exercise-1-10.rkt  exercise-1-11.rkt  exercise-1-12.rkt  exercise-1-16.rkt  exercise-1-3.rkt  exercise-1-7.rkt  exercise-1-8.rkt
stereogram/: hole  integermodulo.rb  letter_e  pyramid2  square  st3.rb
storytime/: rules.txt
tcsh/: webcam  webcam.bak.html  webcam.html
three/: main.js
worldgen/: grow_river.py
zig/: .gitignore
(+404 files in other folders)
